# RWAs

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  repo_tree.txt  requirements.txt  test run.txt
.claude/: settings.local.json
backend/: __init__.py  config.py  main.py
backend/analytics/: __init__.py  drift.py  error_patterns.py  router.py  schemas.py
backend/api/: __init__.py  routes_decide.py  routes_ke.py  routes_qa.py  routes_rules.py
backend/core/: __init__.py  models.py
backend/decoder_service/: __init__.py
backend/ontology/: __init__.py  scenario.py
backend/rag/: __init__.py  frontend_helpers.py  rule_context.py
data/: .gitkeep  mica_2023.txt
docs/: SYNTHETIC_DATA_STRATEGY.md  engine_design.md  knowledge_model.md  rule_dsl.md  semantic_consistency_regulatory_kg.md
frontend/: Home.py  ke_dashboard.py
frontend-react/: nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
ocaml/: droit_core.opam  dune-project
ocaml/core/: dune  ontology.ml  rule_dsl.ml
ocaml/core/rule_examples/: mica_art36.yaml
ocaml/core/test/: dune  test_ontology.ml  test_rule_dsl.ml
tests/: __init__.py  conftest.py  test_analytics.py  test_api.py  test_api_ke.py  test_charts_api.py  test_compiler.py  test_consistency_engine.py  test_decoder.py  test_embedding.py  test_embedding_stubs.py  test_ontology.py  test_rag_internal.py  test_rules.py  test_rules_schema.py  test_runtime.py  test_supertree_adapters.py  test_synthetic_coverage.py  test_tree_adapter.py  test_versioning.py
(+69 files in other folders)
