[project]
name = "droit"
version = "0.1.0"
description = "Computational law platform for tokenized real-world assets (RWAs)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "openai>=1.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
