(lang dune 3.0)

(name droit_core)

(generate_opam_files true)

(source
 (github your-org/droit))

(authors "Droit Team")

(maintainers "Droit Team")

(license MIT)

(documentation https://github.com/your-org/droit)

(package
 (name droit_core)
 (synopsis "Core ontology and rule DSL for regulatory compliance")
 (description "OCaml types for legal ontology (provisions, obligations, actors, instruments) and a rule DSL for executable regulatory logic.")
 (depends
  (ocaml (>= 4.14))
  (dune (>= 3.0))
  yaml
  (alcotest :with-test)))
